changing around functions a little

--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -204,22 +204,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 3])"
+       "2"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x"
+    "a.shape[-2]"
    ]
   },
   {
