w_to_omega implementation

--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -11,38 +11,16 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
+    "import importlib\n",
+    "import wrf\n",
     "\n",
-    "from classes import CoordinateField\n",
+    "from classes import (\n",
+    "    CoordinateField,\n",
+    "    ScalarField\n",
+    ")\n",
     "from helpers import great_circle_distance\n",
     "\n",
     "f = xr.open_dataset('../data/2013.11.18_regrid.nc')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(<zip object at 0x11f4de5c8>, dtype=object)"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = CoordinateField(f.lat, f.lon, great_circle_distance)"
    ]
   },
   {
@@ -51,71 +29,151 @@
    "metadata": {},
    "outputs": [
     {
+     "ename": "NameError",
+     "evalue": "name 'CoordinateField' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-617310f18c0d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCoordinateField\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgreat_circle_distance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mScalarField\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mU\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdUdx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_ddx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdUdy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_ddy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'CoordinateField' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "c = CoordinateField(f.lat, f.lon, great_circle_distance)\n",
+    "s = ScalarField(f.U, c.dx, c.dy)\n",
+    "\n",
+    "dUdx = s.get_ddx()\n",
+    "dUdy = s.get_ddy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "array([6.77979673, 6.76650549, 6.75320911, 6.73990758, 6.72660092,\n",
-       "       6.71328914, 6.69997224, 6.68665024, 6.67332315, 6.65999098,\n",
-       "       6.64665373, 6.63331143, 6.61996407, 6.60661167, 6.59325424,\n",
-       "       6.57989179, 6.56652433, 6.55315186, 6.53977441, 6.52639198,\n",
-       "       6.51300457, 6.49961221, 6.4862149 , 6.47281264, 6.45940546,\n",
-       "       6.44599336, 6.43257635, 6.41915444, 6.40572764, 6.39229597,\n",
-       "       6.37885942, 6.36541802, 6.35197177, 6.33852069, 6.32506477,\n",
-       "       6.31160404, 6.2981385 , 6.28466817, 6.27119305, 6.25771316,\n",
-       "       6.2442285 , 6.23073908, 6.21724492, 6.20374603, 6.19024241,\n",
-       "       6.17673407, 6.16322103, 6.1497033 , 6.13618089, 6.1226538 ,\n",
-       "       6.10912205, 6.09558565, 6.0820446 , 6.06849893, 6.05494863,\n",
-       "       6.04139372, 6.02783421, 6.01427011, 6.00070143, 5.98712818,\n",
-       "       5.97355037, 5.95996801, 5.94638112, 5.93278969, 5.91919375,\n",
-       "       5.9055933 , 5.89198835, 5.87837891, 5.864765  , 5.85114662,\n",
-       "       5.83752378, 5.8238965 , 5.81026479, 5.79662865, 5.78298809,\n",
-       "       5.76934314, 5.75569378, 5.74204005, 5.72838194, 5.71471947,\n",
-       "       5.70105265, 5.68738148, 5.67370599, 5.66002617, 5.64634205,\n",
-       "       5.63265362, 5.6189609 , 5.60526391, 5.59156265, 5.57785712,\n",
-       "       5.56414735, 5.55043335, 5.53671511, 5.52299266, 5.50926601,\n",
-       "       5.49553516, 5.48180012, 5.46806091, 5.45431753, 5.44057   ,\n",
-       "       5.42681833, 5.41306253, 5.3993026 , 5.38553856, 5.37177042,\n",
-       "       5.35799819, 5.34422187, 5.33044149, 5.31665705, 5.30286856,\n",
-       "       5.28907603, 5.27527948, 5.2614789 , 5.24767432, 5.23386575,\n",
-       "       5.22005319, 5.20623665, 5.19241615, 5.17859169, 5.16476329,\n",
-       "       5.15093095, 5.1370947 , 5.12325453, 5.10941046, 5.0955625 ,\n",
-       "       5.08171066, 5.06785495, 5.05399538, 5.04013196, 5.0262647 ,\n",
-       "       5.01239361, 4.99851871, 4.98464   , 4.97075749, 4.9568712 ,\n",
-       "       4.94298114, 4.92908731, 4.91518972, 4.9012884 , 4.88738334,\n",
-       "       4.87347456, 4.85956206, 4.84564587, 4.83172599, 4.81780242,\n",
-       "       4.80387519, 4.7899443 , 4.77600976, 4.76207159, 4.74812979,\n",
-       "       4.73418437, 4.72023535, 4.70628273, 4.69232653, 4.67836675,\n",
-       "       4.66440341, 4.65043652, 4.63646609, 4.62249213, 4.60851465,\n",
-       "       4.59453365, 4.58054916, 4.56656118, 4.55256973, 4.5385748 ,\n",
-       "       4.52457642, 4.5105746 , 4.49656933, 4.48256065, 4.46854855,\n",
-       "       4.45453305, 4.44051415, 4.42649188, 4.41246623, 4.39843722,\n",
-       "       4.38440487, 4.37036917, 4.35633015, 4.34228781, 4.32824216,\n",
-       "       4.31419321, 4.30014098, 4.28608548, 4.27202671, 4.25796469,\n",
-       "       4.24389942, 4.22983093, 4.21575921, 4.20168428, 4.18760615,\n",
-       "       4.17352484, 4.15944034, 4.14535268, 4.13126186, 4.11716789,\n",
-       "       4.10307079, 4.08897057, 4.07486723, 4.06076078, 4.04665125,\n",
-       "       4.03253863, 4.01842294, 4.00430419, 3.9901824 , 3.97605756,\n",
-       "       3.9619297 , 3.94779881, 3.93366493, 3.91952804, 3.90538817,\n",
-       "       3.89124533, 3.87709953, 3.86295077, 3.84879907, 3.83464444,\n",
-       "       3.82048688, 3.80632642, 3.79216306, 3.77799682, 3.76382769,\n",
-       "       3.7496557 , 3.73548085, 3.72130316, 3.70712264, 3.69293929,\n",
-       "       3.67875313, 3.66456416, 3.65037241, 3.63617788, 3.62198058,\n",
-       "       3.60778052, 3.59357771, 3.57937216, 3.56516389, 3.55095291,\n",
-       "       3.53673922, 3.52252284, 3.50830377, 3.49408203, 3.47985764,\n",
-       "       3.46563059, 3.4514009 , 3.43716859, 3.42293365, 3.40869611,\n",
-       "       3.39445598, 3.38021326, 3.36596796, 3.3517201 , 3.33746969,\n",
-       "       3.32321674, 3.30896126, 3.29470325, 3.28044274, 3.26617973,\n",
-       "       3.25191423, 3.23764626, 3.22337582, 3.20910292, 3.19482759,\n",
-       "       3.18054981, 3.16626962, 3.15198702, 3.13770201, 3.12341462,\n",
-       "       3.10912484, 3.0948327 , 3.0805382 , 3.06624136, 3.05194218])"
+       "<xarray.DataArray 'Q' (XTIME: 67, lev: 10, lat: 270, lon: 370)>\n",
+       "[66933000 values with dtype=float32]\n",
+       "Coordinates:\n",
+       "  * lon      (lon) float64 3.0 3.15 3.3 3.45 3.6 ... 57.75 57.9 58.05 58.2 58.35\n",
+       "  * lat      (lat) float64 66.0 66.05 66.1 66.15 66.2 ... 79.3 79.35 79.4 79.45\n",
+       "  * XTIME    (XTIME) datetime64[ns] 2013-11-18T06:00:00 ... 2013-11-21\n",
+       "  * lev      (lev) float64 880.0 865.0 850.0 835.0 ... 525.0 500.0 475.0 450.0\n",
+       "Attributes:\n",
+       "    long_name:    Water vapor mixing ratio\n",
+       "    units:        kg kg-1\n",
+       "    description:  Water vapor mixing ratio\n",
+       "    FieldType:    104"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c.dx"
+    "f.Q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[1.        , 1.        , 1.        , 1.        ],\n",
+       "         [0.5       , 0.5       , 0.5       , 0.5       ]],\n",
+       "\n",
+       "        [[0.66666667, 0.66666667, 0.66666667, 0.66666667],\n",
+       "         [0.5       , 0.5       , 0.5       , 0.5       ]]],\n",
+       "\n",
+       "\n",
+       "       [[[0.2       , 0.2       , 0.2       , 0.2       ],\n",
+       "         [0.16666667, 0.16666667, 0.16666667, 0.16666667]],\n",
+       "\n",
+       "        [[0.28571429, 0.28571429, 0.28571429, 0.28571429],\n",
+       "         [0.25      , 0.25      , 0.25      , 0.25      ]]]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([\n",
+    "    [\n",
+    "        [\n",
+    "            [1,1,1,1],\n",
+    "            [2,2,2,2]\n",
+    "        ],\n",
+    "        [\n",
+    "            [3,3,3,3],\n",
+    "            [4,4,4,4]\n",
+    "        ],\n",
+    "    ],\n",
+    "    [\n",
+    "        [\n",
+    "            [5,5,5,5],\n",
+    "            [6,6,6,6]\n",
+    "        ],\n",
+    "        [\n",
+    "            [7,7,7,7],\n",
+    "            [8,8,8,8]\n",
+    "        ],\n",
+    "    ],\n",
+    "])\n",
+    "b = np.array(\n",
+    "    [\n",
+    "        [\n",
+    "            [1,1,1,1],\n",
+    "            [2,2,2,2]\n",
+    "        ],\n",
+    "        [\n",
+    "            [3,3,3,3],\n",
+    "            [4,4,4,4]\n",
+    "        ],\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "divisor = np.array([1, 2])\n",
+    "\n",
+    "divisor[:, np.newaxis, np.newaxis]\n",
+    "\n",
+    "divisor[:, np.newaxis, np.newaxis]/a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[\n",
+    "    [\n",
+    "        [1]\n",
+    "    ],\n",
+    "    [\n",
+    "        [2]\n",
+    "    ],\n",
+    "]"
    ]
   },
   {
