generating matrices hell yeah

--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -18,70 +18,79 @@
     "    CoordinateField,\n",
     "    ScalarField\n",
     ")\n",
-    "from helpers import great_circle_distance\n",
+    "from helpers import (\n",
+    "    great_circle_distance,\n",
+    "    w_to_omega\n",
+    ")\n",
     "\n",
     "f = xr.open_dataset('../data/2013.11.18_regrid.nc')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'CoordinateField' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-617310f18c0d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCoordinateField\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgreat_circle_distance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mScalarField\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mU\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdUdx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_ddx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdUdy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_ddy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'CoordinateField' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = CoordinateField(f.lat, f.lon, great_circle_distance)\n",
     "s = ScalarField(f.U, c.dx, c.dy)\n",
     "\n",
     "dUdx = s.get_ddx()\n",
-    "dUdy = s.get_ddy()"
+    "dUdy = s.get_ddy()\n",
+    "\n",
+    "omega = w_to_omega(w=f.W, temp=f.TK, qv=f.Q, p=f.lev)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<xarray.DataArray 'Q' (XTIME: 67, lev: 10, lat: 270, lon: 370)>\n",
-       "[66933000 values with dtype=float32]\n",
-       "Coordinates:\n",
-       "  * lon      (lon) float64 3.0 3.15 3.3 3.45 3.6 ... 57.75 57.9 58.05 58.2 58.35\n",
-       "  * lat      (lat) float64 66.0 66.05 66.1 66.15 66.2 ... 79.3 79.35 79.4 79.45\n",
-       "  * XTIME    (XTIME) datetime64[ns] 2013-11-18T06:00:00 ... 2013-11-21\n",
-       "  * lev      (lev) float64 880.0 865.0 850.0 835.0 ... 525.0 500.0 475.0 450.0\n",
-       "Attributes:\n",
-       "    long_name:    Water vapor mixing ratio\n",
-       "    units:        kg kg-1\n",
-       "    description:  Water vapor mixing ratio\n",
-       "    FieldType:    104"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.DataArray ()>\n",
+      "array(-0.000208)\n",
+      "Coordinates:\n",
+      "    lon      float64 3.6\n",
+      "    lat      float64 66.15\n",
+      "    XTIME    datetime64[ns] 2013-11-18T07:00:00\n",
+      "    lev      float64 850.0 <xarray.DataArray ()>\n",
+      "array(-0.000208)\n",
+      "Coordinates:\n",
+      "    lon      float64 3.6\n",
+      "    lat      float64 66.15\n",
+      "    XTIME    datetime64[ns] 2013-11-18T07:00:00\n",
+      "    lev      float64 850.0\n"
+     ]
     }
    ],
    "source": [
-    "f.Q"
+    "time_index = 1\n",
+    "p_index = 2\n",
+    "lat_index = 3\n",
+    "lon_index = 4\n",
+    "\n",
+    "p = f.lev[p_index]\n",
+    "temp = f.TK[time_index, p_index, lat_index, lon_index]\n",
+    "w = f.W[time_index, p_index, lat_index, lon_index]\n",
+    "qv = f.Q[time_index, p_index, lat_index, lon_index]\n",
+    "\n",
+    "g = 9.81        # m/s**2\n",
+    "rgas = 287.04   # J/K/kg\n",
+    "eps = 0.622\n",
+    "\n",
+    "density = (p / (rgas*temp)) * (eps * (1 + qv) / (eps + qv))\n",
+    "\n",
+    "omega_test = -g * w * density\n",
+    "\n",
+    "print(omega_test, omega[time_index, p_index, lat_index, lon_index])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +110,7 @@
        "         [0.25      , 0.25      , 0.25      , 0.25      ]]]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,29 +160,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "array([1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 5, 5, 6, 6,\n",
+       "       6, 6, 7, 7, 7, 7, 8, 8, 8, 8])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[\n",
-    "    [\n",
-    "        [1]\n",
-    "    ],\n",
-    "    [\n",
-    "        [2]\n",
-    "    ],\n",
-    "]"
+    "np.reshape(a, (-1), order=\"C\")"
    ]
   },
   {
@@ -259,24 +262,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2],\n",
-       "       [1, 3],\n",
-       "       [1, 4]])"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.array([(1, 2), (1, 3), (1, 4)])"
+    "fd = np.array([(1, 2), (1, 3), (1, 4)])"
    ]
   },
   {
@@ -308,6 +298,149 @@
    ],
    "source": [
     "a.shape[-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'lev' (lev: 10)>\n",
+       "array([880., 865., 850., 835., 820., 550., 525., 500., 475., 450.])\n",
+       "Coordinates:\n",
+       "  * lev      (lev) float64 880.0 865.0 850.0 835.0 ... 525.0 500.0 475.0 450.0"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.lev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 5, 5, 6, 6,\n",
+       "       6, 6, 7, 7, 7, 7, 8, 8, 8, 8])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.reshape(a, (-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-1e04e155ad4e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'list' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "list((1, 2, 3)) < 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = f.isel(lev=slice(0, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 2., 3., 4., 5.])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(1, 5, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(meh, sad) = (1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sad"
    ]
   },
   {
