second derivative stuff, and then some

--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -445,6 +445,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'W' (lat: 270, lon: 370)>\n",
+       "array([[ 0.022839,  0.021565,  0.020461, ..., -0.023529,  0.091806,  0.192445],\n",
+       "       [ 0.021315,  0.022669,  0.021565, ..., -0.040189,  0.118742,  0.167727],\n",
+       "       [ 0.01652 ,  0.022839,  0.022668, ..., -0.043756,  0.11635 ,  0.101954],\n",
+       "       ...,\n",
+       "       [ 0.012025,  0.006731,  0.003095, ..., -0.011058, -0.006555, -0.003922],\n",
+       "       [ 0.011823,  0.006979,  0.002785, ..., -0.004747, -0.003649, -0.003248],\n",
+       "       [ 0.011215,  0.005595,  0.00062 , ..., -0.001121, -0.00106 , -0.001612]],\n",
+       "      dtype=float32)\n",
+       "Coordinates:\n",
+       "  * lon      (lon) float64 3.0 3.15 3.3 3.45 3.6 ... 57.75 57.9 58.05 58.2 58.35\n",
+       "  * lat      (lat) float64 66.0 66.05 66.1 66.15 66.2 ... 79.3 79.35 79.4 79.45\n",
+       "    XTIME    datetime64[ns] 2013-11-20T16:00:00\n",
+       "    lev      float64 880.0\n",
+       "Attributes:\n",
+       "    long_name:    Z-wind component\n",
+       "    units:        m s-1\n",
+       "    description:  z-wind component\n",
+       "    FieldType:    104\n",
+       "    stagger:       "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.W[-9, 0, :, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
