adding heat flux calculations

--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -23,7 +23,9 @@
     "    w_to_omega\n",
     ")\n",
     "\n",
-    "f = xr.open_dataset('../data/2013.11.18_regrid.nc')"
+    "# f = xr.open_mfdataset('../data/*.nc')\n",
+    "f['lev'] = [880., 865., 850., 835., 820., 550., 525., 500., 475., 450.]\n",
+    "f.to_netcdf('../data/2013.11.18_regrid.nc')"
    ]
   },
   {
@@ -484,10 +486,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'HFX' (XTIME: 67, lat: 270, lon: 370)>\n",
+       "dask.array<shape=(67, 270, 370), dtype=float32, chunksize=(67, 270, 370)>\n",
+       "Coordinates:\n",
+       "  * lon      (lon) float64 3.0 3.15 3.3 3.45 3.6 ... 57.75 57.9 58.05 58.2 58.35\n",
+       "  * lat      (lat) float64 66.0 66.05 66.1 66.15 66.2 ... 79.3 79.35 79.4 79.45\n",
+       "  * XTIME    (XTIME) datetime64[ns] 2013-11-18T06:00:00 ... 2013-11-21\n",
+       "Attributes:\n",
+       "    units:        W m-2\n",
+       "    FieldType:    104\n",
+       "    MemoryOrder:  XY \n",
+       "    description:  UPWARD HEAT FLUX AT THE SURFACE\n",
+       "    stagger:      "
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.HFX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'XTIME' (XTIME: 65)>\n",
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "      dtype='timedelta64[ns]')\n",
+       "Coordinates:\n",
+       "  * XTIME    (XTIME) datetime64[ns] 2013-11-18T07:00:00 ... 2013-11-20T23:00:00"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.XTIME[1:] - f.XTIME[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -7.8489203,  -8.190207 ,  -8.515858 ,  -8.608485 ,  -8.625856 ,\n",
+       "         -8.771417 ,  -8.783806 ,  -8.816088 ,  -8.744299 ,  -8.642086 ],\n",
+       "       [ -8.48658  ,  -8.779866 ,  -9.087187 ,  -9.158262 ,  -9.160623 ,\n",
+       "         -9.266253 ,  -9.253261 ,  -9.179844 ,  -9.178572 ,  -9.101691 ],\n",
+       "       [ -9.045821 ,  -9.36234  ,  -9.641285 ,  -9.690358 ,  -9.66053  ,\n",
+       "         -9.793297 ,  -9.731135 ,  -9.64497  ,  -9.635209 ,  -9.518249 ],\n",
+       "       [ -9.648887 ,  -9.921314 , -10.039349 , -10.201505 , -10.222692 ,\n",
+       "        -10.279758 , -10.207149 , -10.090092 , -10.050836 ,  -9.960148 ],\n",
+       "       [-10.226849 , -10.498546 , -10.586646 , -10.735505 , -10.760147 ,\n",
+       "        -10.687649 , -10.677529 , -10.585637 , -10.515052 , -10.355599 ],\n",
+       "       [-10.815898 , -11.055432 , -11.11137  , -11.274778 , -11.2366905,\n",
+       "        -11.162092 , -11.111352 , -10.976476 , -10.877798 , -10.713261 ],\n",
+       "       [-11.279867 , -11.565483 , -11.665872 , -11.729757 , -11.689391 ,\n",
+       "        -11.5884495, -11.513205 , -11.385466 , -11.196908 , -11.045562 ],\n",
+       "       [-11.804512 , -12.127639 , -12.152146 , -12.099725 , -12.097889 ,\n",
+       "        -11.951844 , -11.891445 , -11.669843 , -11.4375305, -11.255911 ],\n",
+       "       [-12.4168005, -12.637636 , -12.619329 , -12.526636 , -12.465168 ,\n",
+       "        -12.334925 , -12.156104 , -11.89549  , -11.624272 , -11.48953  ],\n",
+       "       [-12.986113 , -13.16221  , -13.049435 , -12.903474 , -12.836666 ,\n",
+       "        -12.676675 , -12.430603 , -12.165104 , -11.887349 , -11.644897 ]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.isel(lev=slice(1, 4), lat=slice(100, 110), lon=slice(100, 110)).U[1, 1].values"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from classes import (ScalarField, CoordinateField)\n",
+    "\n",
+    "tf = f.isel(lev=slice(1, 4), lat=slice(100, 110), lon=slice(100, 110))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
