editing the coefficient matrix

--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -517,28 +517,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<xarray.DataArray 'XTIME' (XTIME: 65)>\n",
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "      dtype='timedelta64[ns]')\n",
+       "<xarray.DataArray 'Q' (XTIME: 67, lev: 10, lat: 270, lon: 370)>\n",
+       "dask.array<shape=(67, 10, 270, 370), dtype=float32, chunksize=(67, 10, 270, 370)>\n",
        "Coordinates:\n",
-       "  * XTIME    (XTIME) datetime64[ns] 2013-11-18T07:00:00 ... 2013-11-20T23:00:00"
+       "  * lon      (lon) float64 3.0 3.15 3.3 3.45 3.6 ... 57.75 57.9 58.05 58.2 58.35\n",
+       "  * lat      (lat) float64 66.0 66.05 66.1 66.15 66.2 ... 79.3 79.35 79.4 79.45\n",
+       "  * XTIME    (XTIME) datetime64[ns] 2013-11-18T06:00:00 ... 2013-11-21\n",
+       "  * lev      (lev) float64 880.0 865.0 850.0 835.0 ... 525.0 500.0 475.0 450.0\n",
+       "Attributes:\n",
+       "    long_name:    Water vapor mixing ratio\n",
+       "    units:        kg kg-1\n",
+       "    description:  Water vapor mixing ratio\n",
+       "    FieldType:    104"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f.XTIME[1:] - f.XTIME[:-1]"
+    "f.Q"
    ]
   },
   {
