changing the equation

--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -23,9 +23,8 @@
     "    w_to_omega\n",
     ")\n",
     "\n",
-    "# f = xr.open_mfdataset('../data/*.nc')\n",
-    "f['lev'] = [880., 865., 850., 835., 820., 550., 525., 500., 475., 450.]\n",
-    "f.to_netcdf('../data/2013.11.18_regrid.nc')"
+    "f = xr.open_dataset('../data/2013.11.18_regrid.nc')\n",
+    "f['lev'] = [880., 865., 850., 835., 820., 550., 525., 500., 475., 450.]"
    ]
   },
   {
@@ -588,15 +587,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.Dataset>\n",
+       "Dimensions:  (XTIME: 67, lat: 270, lev: 2, lon: 370)\n",
+       "Coordinates:\n",
+       "  * lon      (lon) float64 3.0 3.15 3.3 3.45 3.6 ... 57.75 57.9 58.05 58.2 58.35\n",
+       "  * lat      (lat) float64 66.0 66.05 66.1 66.15 66.2 ... 79.3 79.35 79.4 79.45\n",
+       "  * XTIME    (XTIME) datetime64[ns] 2013-11-18T06:00:00 ... 2013-11-21\n",
+       "  * lev      (lev) float64 880.0 850.0\n",
+       "Data variables:\n",
+       "    HFX      (XTIME, lat, lon) float32 ...\n",
+       "    LH       (XTIME, lat, lon) float32 ...\n",
+       "    Q        (XTIME, lev, lat, lon) float32 ...\n",
+       "    Q2       (XTIME, lat, lon) float32 ...\n",
+       "    T2       (XTIME, lat, lon) float32 ...\n",
+       "    TK       (XTIME, lev, lat, lon) float32 ...\n",
+       "    U        (XTIME, lev, lat, lon) float32 ...\n",
+       "    U10      (XTIME, lat, lon) float32 ...\n",
+       "    V        (XTIME, lev, lat, lon) float32 ...\n",
+       "    V10      (XTIME, lat, lon) float32 ...\n",
+       "    W        (XTIME, lev, lat, lon) float32 ...\n",
+       "    Z        (XTIME, lev, lat, lon) float32 ...\n",
+       "Attributes:\n",
+       "    CDI:          Climate Data Interface version 1.7.2 (http://mpimet.mpg.de/...\n",
+       "    Conventions:  CF-1.4\n",
+       "    history:      Mon Apr 15 12:29:35 2019: cdo remapdis,latlongrid.txt surfa...\n",
+       "    CDO:          Climate Data Operators version 1.7.2 (http://mpimet.mpg.de/..."
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.sel(lev=[880, 850])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean([1,2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from classes import (ScalarField, CoordinateField)\n",
-    "\n",
-    "tf = f.isel(lev=slice(1, 4), lat=slice(100, 110), lon=slice(100, 110))\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
