adding in low pathing

--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -13,6 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "import importlib\n",
     "import wrf\n",
+    "import pandas as pd\n",
     "\n",
     "from classes import (\n",
     "    CoordinateField,\n",
@@ -24,7 +25,7 @@
     ")\n",
     "\n",
     "f = xr.open_dataset('../data/2013.11.18_regrid.nc')\n",
-    "f['lev'] = [880., 865., 850., 835., 820., 550., 525., 500., 475., 450.]"
+    "x = pd.read_csv(\"../data/PL_2013-11-18-0600_20-4km_stormtrack1.csv\")"
    ]
   },
   {
@@ -631,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -640,13 +641,123 @@
        "2.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.mean([1,2, 3])"
+    "np.mean([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'lon' (lon: 3)>\n",
+       "array([3.15, 3.3 , 3.15])\n",
+       "Coordinates:\n",
+       "  * lon      (lon) float64 3.15 3.3 3.15\n",
+       "Attributes:\n",
+       "    standard_name:  longitude\n",
+       "    long_name:      longitude\n",
+       "    units:          degrees_east\n",
+       "    axis:           X"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.lon.sel(lon=[3.1,3.3,3.1], method=\"nearest\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'lon' (lon: 67)>\n",
+       "array([58.35,  7.8 ,  9.75, 10.8 , 12.15, 12.75, 13.95, 14.55, 16.2 , 16.8 ,\n",
+       "       17.85, 18.45, 19.5 , 19.65, 20.1 , 22.5 , 22.5 , 22.8 , 23.1 , 23.25,\n",
+       "       23.55, 23.1 , 20.1 , 19.5 , 19.65, 20.1 , 19.35, 19.5 , 21.9 , 22.05,\n",
+       "       21.9 , 22.8 , 23.85, 24.15, 23.7 , 23.7 , 23.85, 24.3 , 24.9 , 25.35,\n",
+       "       26.25, 25.95, 26.7 , 27.3 , 27.9 , 28.65, 29.4 , 30.3 , 31.95, 32.85,\n",
+       "       33.3 , 34.65, 35.85, 37.2 , 38.4 , 39.15, 40.35, 41.7 , 43.05, 44.7 ,\n",
+       "       46.2 , 47.55, 49.05, 50.7 , 58.35, 58.35, 58.35])\n",
+       "Coordinates:\n",
+       "  * lon      (lon) float64 58.35 7.8 9.75 10.8 12.15 ... 50.7 58.35 58.35 58.35\n",
+       "Attributes:\n",
+       "    standard_name:  longitude\n",
+       "    long_name:      longitude\n",
+       "    units:          degrees_east\n",
+       "    axis:           X"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.lon.sel(lon=x[\"Longitude\"].values, method=\"nearest\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(f.lon==7.8)[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'lat' ()>\n",
+       "array(69.15)\n",
+       "Coordinates:\n",
+       "    lat      float64 69.15\n",
+       "Attributes:\n",
+       "    standard_name:  latitude\n",
+       "    long_name:      latitude\n",
+       "    units:          degrees_north\n",
+       "    axis:           Y"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.lat[63]"
    ]
   },
   {
