finalizing to get outputs

--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -734,30 +734,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<xarray.DataArray 'lat' ()>\n",
-       "array(69.15)\n",
+       "<xarray.DataArray 'T2' (XTIME: 67, lat: 270, lon: 370)>\n",
+       "[6693300 values with dtype=float32]\n",
        "Coordinates:\n",
-       "    lat      float64 69.15\n",
+       "  * lon      (lon) float64 3.0 3.15 3.3 3.45 3.6 ... 57.75 57.9 58.05 58.2 58.35\n",
+       "  * lat      (lat) float64 66.0 66.05 66.1 66.15 66.2 ... 79.3 79.35 79.4 79.45\n",
+       "  * XTIME    (XTIME) datetime64[ns] 2013-11-18T06:00:00 ... 2013-11-21\n",
        "Attributes:\n",
-       "    standard_name:  latitude\n",
-       "    long_name:      latitude\n",
-       "    units:          degrees_north\n",
-       "    axis:           Y"
+       "    units:        K\n",
+       "    FieldType:    104\n",
+       "    MemoryOrder:  XY \n",
+       "    description:  TEMP at 2 M\n",
+       "    stagger:      "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f.lat[63]"
+    "f.T2"
    ]
   },
   {
